# uuidpp

./: .gitignore  AUTHORS  Makefile.am  NEWS  autogen.sh  configure.ac
src/: Makefile.am  md5.h  portable-endian.h  sha1.c  sha1.h  uuidpp.cpp  uuidpp.hpp
tests/: Makefile.am  test.cpp
